--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-21  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftcommon.i (install_font_file): Initialize new elements of
+	reallocated `fonts' array with zero bytes.
+
 2003-05-20  Martin Zinser  <zinser@decus.de>
 
 	* descrip.mms: Removed.  Now created by...
