--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-01  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftview.c (Render_Waterfall): Handle fixed-sized fonts better.
+
 2003-05-27  Martin Zinser  <zinser@decus.de>
 
 	* vms_make.com: Handle ftbench.
