--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-06-16  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftcheckfixedwidth.c: Renamed to...
+	* src/ftchkwd.c: This.
+	* src/testnames.c: Renamed to...
+	* src/testname.c: This.
+	* src/Jamfile, Makefile: Updated.
+
 2006-06-15  Werner Lemberg  <wl@gnu.org>
 
 	* *.mk: Updated and revised to latest changes in FreeType 2.
