--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-30  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftdump.c (Print_Fixed): Print all elements of
+	face->available_sizes.
+
 2006-06-17  Werner Lemberg  <wl@gnu.org>
 
 	* src/*.c: s/ft_glyph_format_*/FT_GLYPH_FORMAT_*/.
