--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-02-20  Werner Lemberg  <wl@gnu.org>
+
+	Add `light' render mode to ftview (using key `L').
+
+	* src/ftcommon.i (set_current_image_type): Handle
+	FT_LOAD_TARGET_LIGHT.
+	(glyph_to_bitmap, get_glyph_bitmap): Updated.
+	* src/ftview.c (Process_Event): Provide proper header for `light'
+	render mode.
+	(Help): Updated.
+
 2004-02-18  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftcommon.i: Include FT_CACHE_MANAGER_H and FT_STROKER_H.
