--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-26  Ulrich  <ulrich@infopuls.com>
+
+        * graph/x11/grx11.c: fixes visual selection problems
+
+
 2004-03-20  Steve Hartwell  <shspamsink@comcast.net>
 
 	Updated to make it compile with newer MacOS versions.
