--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-09  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftdump.c (put_unicode_be16): Initialize `ch'.
+
 2004-04-29  Flavio Stanchina  <flavio@stanchina.net>
 
 	Parse SFNT `name' table in ftdump if new option -n is given.
