--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-11  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftstring.c (layout_glyphs): Updated to latest FreeType library
+	changes.
+
 2004-06-03  Werner Lemberg  <wl@gnu.org>
 
 	Add autohinting toggling (using the `f' key) to ftstring.
