--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@
 	* src/ftview.c (Render_Waterfall): Handle size as points, not as
 	pixels.
 
+	* src/ftstring.c (layout_glyphs), src/ftmulti.c (LoadChar),
+	src/ftcommon.i (set_current_image_type): Always use
+	FT_LOAD_IGNORE_GLOBAL_ADVANCE_WIDTH.
+
 2004-11-16  Dr. Martin P.J. Zinser  <zinser@decus.de>
 
 	* vms_make.com: Updated to be in sync with vms_make.com from FT2.
