--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-15  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftcommon.i (glyph_to_bitmap): Don't convert 1bpp bitmaps.
+
 2004-12-14  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftcommon.i: Include new FT_BITMAP_H.
