--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-05-25  Chia I Wu  <b90201047@ntu.edu.tw>
+
+	* src/ftcommon.i: Include FT_SYNTHESIS_H.
+	Make `render_mode' an enumeration.
+
+	* src/ftview.c (Render_Embolden): New function.
+	(Process_Event, main): Update to `render_mode' enumeration.
+
 2005-05-23  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftvalid (main) <'v'>: Add cast to make it compile with C++.
