--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-07-04  Chia I Wu  <b90201047@ntu.edu.tw>
+
+	* src/ftcommon.i: Removed.
+
+	* src/ftgamma.c: Updated to use api provided by ftcommon.c.
+
+	* Makefile: Make ftgamma depend on ftcommon.c.
+	Remove dependency of ftmulti.c on ftcommon.i.
+
 2005-06-17  Werner Lemberg  <wl@gnu.org>
 
 	* Makefile: Update rules for ftview and ftstring which no longer
